# authentication-playground

./: .env  .gitignore  Cargo.toml
migrations/: 00001_create_user.sql  00002_create_session.sql  00003_create_password.sql  00004_user_lower_index.sql
src/: error.rs  main.rs  password.rs  secret_box.rs
src/web/: auth.rs  error.rs  mod.rs  state.rs
templates/: error.html  login.html  register.html  sessions.html
