[package]
name = "authentication-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.7.6"
base64 = "0.22.1"
blake2 = "0.10.6"
bytes = "1.7.2"
libc = "0.2.159"
libsodium-sys-stable = { version = "1.21.2", features = ["fetch-latest", "minimal", "optimized"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
