[package]
name = "authentication-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
base64 = "0.22.1"
blake2 = "0.10.6"
bytes = "1.7.2"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
libc = "0.2.159"
libsodium-sys-stable = { version = "1.21.2", features = ["fetch-latest", "minimal", "optimized"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["sqlite", "tls-native-tls", "runtime-tokio", "uuid", "chrono"] }
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
